# ansible-dev-tools

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .python-version  .readthedocs.yml  README.md  Skill.md  Taskfile.yml  ansible-navigator.yml  bindep.txt  cspell.config.yaml  devfile.yaml  execution-environment.yml  go.py  mise.toml  mkdocs.yml  pyproject.toml  renovate.json  requirements.txt  ruffme.py  sonar-project.properties  tox.ini
.config/: constraints.txt  dictionary.txt  lock-requirements.txt  pydoclint-baseline.txt  requirements-dev.txt  requirements-docs.txt  requirements-lock.txt  requirements-server.in  requirements-test.in  requirements.in  requirements.txt  test-requirements.txt
.devcontainer/: devcontainer.json
.devcontainer/docker/: devcontainer.json
.devcontainer/podman/: devcontainer.json
.github/: CODEOWNERS  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug.yml
.github/actions/build-release/: action.yml
.github/actions/build-test/: action.yml
.github/actions/merge-release/: action.yml
.github/workflows/: .build-image.yml  ack.yml  debug-publish.yml  devel-image.yml  push.yml  release.yml  tox.yml
devspaces/: Containerfile  README.md
devspaces/context/: ansible-prompt.sh  entrypoint.sh  podman.py  requirements.txt  requirements.yml  setup.sh
devspaces/playbooks/: ansible-navigator.yml  site.yaml
docs/: container.md  content_best_practices.md  contributor-guide.md  contributor_guide.md  devspaces.md  getting-started.md  index.md  installation.md  introduction.md  user_guide.md
docs/examples/: execution-environment.yml  requirements.txt  requirements.yml
docs/getting-started/: building-collection.md  index.md
docs/journeys/: journeys.md  personas.md
docs/media/: compress.sh
docs/user-guide/: building-collection.md  ci-setup.md  ci.md  content-best-practices.md  content-release.md  index.md  release.md  test-isolation.md  testing.md
docs/user_guide/: testing.md
final/: .ohmyposh.omp.json  Containerfile  docker-prune.sh  from-main-requirements.txt  requirements.txt  setup.sh  setup2.sh
final/context/: setup.sh
selenium/: Containerfile  README.md  init.go  selenium-node.toml  settings.json
src/ansible_cdk/: __init__.py  __main__.py  _version.py  arg_parser.py  cli.py  version_builder.py
src/ansible_dev_tools/: __main__.py  _version.py  arg_parser.py  cli.py  server_utils.py  utils.py  version_builder.py
src/ansible_dev_tools/resources/server/: __init__.py  creator.py  creator_dynamic.py  creator_v1.py  creator_v2.py  server_info.py
src/ansible_dev_tools/resources/server/data/: __init__.py  openapi.yaml
src/ansible_dev_tools/subcommands/: __init__.py  server.py  subcmd_mcp.py
src/ansible_dev_tools/tests/: conftest.py
src/ansible_dev_tools/tests/fixtures/integration/test_container/: execution-environment.yml  site.yml
src/ansible_dev_tools/tests/integration/: conftest.py  test_cli.py  test_container.py  test_server_creator_dynamic.py  test_server_creator_v2.py
src/ansible_dev_tools/tests/unit/: __init__.py  test_basic.py
tests/: ansible-navigator.yml  conftest.py  site.yml  test.sh
tests/devcontainer/: .devcontainer.json  LICENSE  README.md  Taskfile.test.yml  Taskfile.yml
tests/devcontainer/scripts/: run_downstream.sh  run_upstream.sh
tests/fixtures/integration/test_container/: execution-environment.yml
tests/integration/: conftest.py  test_basic.py  test_cli.py  test_container.py  test_server_creator.py  test_server_creator_v1.py  test_server_creator_v2.py  test_server_info.py  test_zsh_completions.py
tests/unit/: test_basic.py  test_cli.py  test_server.py  test_server_utils.py  test_version_builder.py
tools/: cleanup.sh  devspaces.sh  ee.sh  image.sh  selenium.sh  setup-image.sh  smoke.sh  test-setup.sh  update-readme.py
