[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 45", "setuptools_scm[toml]>=6.2"]

[project]
authors = [{"email" = "bthornto@redhat.com", "name" = "Bradley A. Thornton"}]
classifiers = [
  'Development Status :: 2 - Pre-Alpha',
  'Intended Audience :: Developers',
  'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
  'Operating System :: OS Independent',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: Implementation :: CPython',
  'Programming Language :: Python',
  'Topic :: Software Development',
  'Topic :: Utilities'
]
description = "The ansible content development kit."
dynamic = ["dependencies", "optional-dependencies", "version"]
keywords = ["ansible"]
license = {text = "GPL-3.0-only"}
maintainers = [{"email" = "info@ansible.com", "name" = "Ansible by Red Hat"}]
name = "ansible-cdk"
readme = "README.md"
requires-python = ">=3.9"

[project.scripts]
ansible-cdk = "ansible_cdk.cli:main"

[project.urls]
changelog = "https://github.com/ansible-community/ansible-cdk/releases"
documentation = "https://ansible-cdk.readthedocs.io/en/latest/"
homepage = "https://github.com/ansible-community/ansible-cdk"
repository = "https://github.com/ansible-community/ansible-cdk"

[tool.mypy]
strict = true

[tool.pylint]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.master]
good-names = "i,j,k,ex,Run,_,f,fh"
ignore = [
  "_version.py" # built by setuptools_scm
]
jobs = 0
no-docstring-rgx = "__.*__"

[tool.pylint.messages_control]
disable = ["too-few-public-methods", "too-many-locals"]

[tool.ruff]
builtins = ["__"]
fix = true
line-length = 100
select = ["ALL"]
target-version = "py39"

[tool.ruff.flake8-pytest-style]
parametrize-values-type = "tuple"

[tool.ruff.isort]
lines-after-imports = 2 # Ensures consistency for cases when there's variable vs function/class definitions after imports
lines-between-types = 1 # Separate import/from with 1 line

[tool.ruff.per-file-ignores]
# S101 Allow assert in tests
# S602 Allow shell in test
# T201 Allow print in tests
"tests/**" = ["S101", "S602", "T201"]

[tool.ruff.pydocstyle]
convention = "pep257"

[tool.setuptools.dynamic]
dependencies = {file = [".config/requirements.in"]}
optional-dependencies.dev = {file = [".config/requirements-dev.txt"]}
optional-dependencies.docs = {file = [".config/requirements-docs.txt"]}
optional-dependencies.lock = {file = [".config/requirements-lock.txt"]}
optional-dependencies.test = {file = [".config/requirements-test.txt"]}

[tool.setuptools_scm]
local_scheme = "no-local-version"
write_to = "src/ansible_cdk/_version.py"

[tool.tomlsort]
all = true
in_place = true
